reports/1D-MUSIC.log
Traceback (most recent call last):
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/asyncio/base_events.py", line 488, in run_until_complete
    return future.result()
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/client.py", line 536, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/agah/opt/anaconda3/envs/jbnew/lib/python3.6/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
my_sound = load_audio('../WavMRI/3DSPGR_TR12ms.wav') # Select one from WavMRI folder

tduration=
'''
TASK: Assign tduration with the duration of the signal (in seconds, but be accurate!)
'''

sin_freq = 10
'''
Choose a lower (e.g. 2) or a higher (e.g. 1000) sin_freq and see how they affect the output.
'''

sf = my_sound['fsamp'] 

sin_wave = (np.sin(2*np.pi*np.arange(sf*tduration)*sin_freq/sf))/2
'''
Playground 1
Tip: You can try other trigonometric functions in numpy as well :) 
'''

result = my_sound['signal'] * sin_wave
'''
Playground 2
Tip: Add, subtract & multiply your sound with this sin_wave
'''

make_audio(result,my_sound['fsamp']) # Hear it!
------------------

[0;36m  File [0;32m"<ipython-input-27-a5ad931b9983>"[0;36m, line [0;32m3[0m
[0;31m    tduration=[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-27-a5ad931b9983>, line 3)

